# gdocs_4_ski_automation

./: .gitignore  README.md  pyproject.toml  regenerate_oauth.py
data/sample_sheets/: anmeldungen.xlsx  anmeldungen_db_do_not_change.xlsx  settings.xlsx
deployment/: DEPLOYMENT.md  appscript.js  deploy.sh  main.py
gdocs_4_ski_automation/: service.py
gdocs_4_ski_automation/core/: ctypes.py  factories.py  mail_services.py  price_calculation.py  sheet_dumper.py
gdocs_4_ski_automation/services/: mail_services.py  main.py
gdocs_4_ski_automation/utils/: utils.py
tests/: test_price_calculation.py
